# stat_converter

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  gordon_ryan.xlsx  kade_ruotolo.xlsx  main.py  project_structure  requirements.txt  run.sh  saves.sh  setup.cfg
.github/workflows/: main.yml
docs/: dataflow.md  help.md  project_structure
scripts/: show_logs.sh  structure.sh  todo.sh
void/: .dep  .gitignore  VOID.py  __init__.py  project_structure  todo.sh  void-cli.py
void/.github/ISSUE_TEMPLATE/: NOTICE.md
void/configs/: __init__.py  configs.cfg  configs.py  main_configs.cfg  main_configs.py  meta_configs.py  update_configs.py  update_method.py
void/modules/: __init__.py  converter.py  dataflow.md  error_check.py  file.py  imports.py  logger.py  stat_logger.py  stat_object.py  stat_type.py  statics.py
void/modules/Errors/: error_codes.md  error_types.py
