[metadata]
name = VOID
version = 1.0.0
description = stat converter for jiu jistics
author = Andrew Leacock
author_email = andrewcleacock@gmail.com
url = https://github.com/Andrew95496/void

[options]
packages = find:

[options.packages.find]
exclude = TEST*, README_img*, athlete*

[options.entry_points]
console_scripts =
    void = void.VOID:VOID
